fixed contrast issue

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 
-$primary: #222222;
+$primary: #5e5e5e;
 $secondary: #b48f53;
 $accent: #c47332;
 
